--- a/css/siteStyle3.css
+++ b/css/siteStyle3.css
@@ -122,13 +122,7 @@ h2{
   }
   
   
-  .listings_text{
-    display: flex;
-    justify-content: center;
-    font-size: small;
-    width: auto;
-    height: auto;
-    flex-direction: column;
+  
     
   }
   .main_content{
@@ -157,8 +151,8 @@ h2{
   
   .mosaique{
   
-    display:flex;
-    flex-flow: row wrap
+    display:grid;
+    grid-template-columns: 30% 30% 30%;
   }
   
   .container{
