--- a/css/siteStyle3.css
+++ b/css/siteStyle3.css
@@ -23,9 +23,10 @@ h2{
     font-size: small;
   }
   .section{
-      width: 80%;
+      width: 90%;
     max-width: 1000px;
     min-width: 700px;
+    display: flex;
   
   }
   .lists {
@@ -46,7 +47,7 @@ h2{
       border: 2px ;
       padding: .5em;
       
-      width: 65%;
+      width: 60%;
       
       border-radius: 5%;
       margin-top: 10px;
@@ -56,7 +57,7 @@ h2{
       background-color: #F2F2F2;
       border: 2px ;
       padding: .5em;
-      list-style: none;
+     
       width: 30%;
       height: 50%;
       border-radius: 5%;
@@ -64,13 +65,17 @@ h2{
   }
   
   .activités {
-      border: 2px ;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+    
+    border: 2px ;
       padding: .5em;
-      list-style: none;
-      width: 100%;
-      height: 40%;
-      border-radius: 5%;
-      margin-top: 10px;
+      
+      
+      
+    border-radius: 5%;
+    margin-top: 10px;
   }
   
   .corps{
@@ -84,27 +89,16 @@ h2{
     
    
   }
+
   
-  
-  
-  
-      
-    
-  .listings{
-      
-   padding: 2px 0;
-      
-  
-  
-    }
   .listings_item{
     
     padding: 2px 0;
     display: flex;
-    width: 100%;
-    height:100%;
+    width: 90%;
+    height:90%;
     max-height: fit-content;
-  
+    max-height: 180px;
   }
   .listings_image{
     
@@ -125,11 +119,7 @@ h2{
   
     
   }
-  .main_content{
-    width: auto;
-    background-color: red;
-    display: flex;
-  }
+ 
   .listings_content{
     display:flex;
     justify-content: space-around;
@@ -142,22 +132,30 @@ h2{
     
     padding: 10;
     border-radius: 10%;
-    width: 30%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     background-color: white;
     margin: 5px;
+    box-shadow: 10px 5px 5px;
   }
   
   .mosaique{
   
     display:grid;
-    grid-template-columns: 30% 30% 30%;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    
+      border: 2px ;
+      padding: .5em;
+      
+      
+      
+      border-radius: 5%;
+      margin-top: 10px;
   }
   
-  .container{
-    display: grid;
-  }
+  
   
   
   
@@ -168,10 +166,9 @@ h2{
     min-height: 50px;
   }
   
-  .bleu{background-color: #28B;}
+  
 
-
-  .main_content_pop{
+  .main_content_pop {
     width: auto;
     background-color: red;
     display: flex;
