--- a/css/siteStyle3.css
+++ b/css/siteStyle3.css
@@ -20,7 +20,7 @@
 
 
 h2{
-    font-size: small;
+  font-size: 22px;    
   }
   .section{
       width: 90%;
@@ -46,7 +46,7 @@ h2{
       background-color: #F2F2F2;
       border: 2px ;
     
-      
+      padding: .5em;
       width: 65%;
       
       border-radius: 5%;
@@ -94,14 +94,14 @@ h2{
     
    
     display: flex;
-    width: 90%;
+    width: 100%;
     height:90%;
     max-height: fit-content;
     max-height: 180px;
   }
   .listings_image{
     
-    border-radius: 10px;
+    border-radius: 10%;
     overflow: hidden;
     
     object-fit: cover;
@@ -110,7 +110,7 @@ h2{
   }
   
   .greyText{
-     font-size: 14px;
+     font-size: 22px;
      line-height:18px;
   }
   
@@ -121,18 +121,8 @@ h2{
     width: auto;
     height: auto;
     flex-direction: column;
-  }
-  
-  .main_content_hebergement{
-    
-   
+    padding: 1em;
     border-radius: 10%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    margin: 10px 10px 10px 10px;
-    box-shadow: 10px 5px 5px;
   }
   
   .mosaique{
@@ -171,25 +161,78 @@ h2{
   
 
   .main_content_pop {
-    width: auto;
-    background-color: red;
+    width: 90%;
+    height: 200px;
+    border-radius: 10%;
     display: flex;
-    max-height: 200px;
+    
+    margin: 10px 10px 10px 10px;
+    box-shadow: 10px 5px 5px grey;
+  }
+
+  .main_content_hebergement{
+    
+    
+    border-radius: 10%;
+    width:90%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin: 10px 10px 10px 10px;
+    box-shadow: 10px 5px 5px grey;
   }
 
   .main_content_hebergement1{
     
-    padding: 10;
+   
     border-radius: 10%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin: 5px;
+    box-shadow: 10px 5px 5px grey;
+
+    grid-column-start: 1; 
+   grid-column-end: 1; 
+   grid-row-start: 1; 
+   grid-row-end: 3; 
+  }
+  .listings_item1{
+    
+   
+    display: flex;
     width: 100%;
+    height:90%;
+    max-height: fit-content;
+    font-size:22px;
+    border-radius: 10%;
+  }
+
+  .main_content_hebergement2{
+    
+   
+    border-radius: 10%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     background-color: white;
     margin: 5px;
     box-shadow: 10px 5px 5px;
 
-    grid-column-start: 1; 
-   grid-column-end: 1; 
+    grid-column-start: 3; 
+   grid-column-end: 3; 
    grid-row-start: 1; 
    grid-row-end: 3; 
+  }
+
+  .listings_item2{
+    
+   
+    display: flex;
+    width: 100%;
+    height:90%;
+    max-height: fit-content;
+    font-size:22px;
+    border-radius: 10%;
   }
