--- a/css/siteStyle3.css
+++ b/css/siteStyle3.css
@@ -20,12 +20,13 @@
 
 
 h2{
-    font-size: small;
+  font-size: 22px;    
   }
   .section{
-      width: 80%;
+      width: 90%;
     max-width: 1000px;
     min-width: 700px;
+    display: flex;
   
   }
   .lists {
@@ -44,8 +45,8 @@ h2{
   .hebergement{
       background-color: #F2F2F2;
       border: 2px ;
+    
       padding: .5em;
-      
       width: 65%;
       
       border-radius: 5%;
@@ -56,7 +57,7 @@ h2{
       background-color: #F2F2F2;
       border: 2px ;
       padding: .5em;
-      list-style: none;
+     
       width: 30%;
       height: 50%;
       border-radius: 5%;
@@ -64,13 +65,16 @@ h2{
   }
   
   .activités {
-      border: 2px ;
-      padding: .5em;
-      list-style: none;
-      width: 100%;
-      height: 40%;
-      border-radius: 5%;
-      margin-top: 10px;
+    
+
+    
+    border: 2px ;
+      
+      
+      
+      
+    border-radius: 5%;
+    margin-top: 10px;
   }
   
   .corps{
@@ -84,31 +88,20 @@ h2{
     
    
   }
+
   
-  
-  
-  
-      
-    
-  .listings{
-      
-   padding: 2px 0;
-      
-  
-  
-    }
   .listings_item{
     
-    padding: 2px 0;
+   
     display: flex;
     width: 100%;
-    height:100%;
+    height:90%;
     max-height: fit-content;
-  
+    max-height: 180px;
   }
   .listings_image{
     
-    border-radius: 10px;
+    border-radius: 10%;
     overflow: hidden;
     
     object-fit: cover;
@@ -117,53 +110,44 @@ h2{
   }
   
   .greyText{
-     font-size: 14px;
+     font-size: 22px;
      line-height:18px;
   }
   
-  
-  .listings_text{
-    display: flex;
-    justify-content: center;
-    font-size: small;
-    width: auto;
-    height: auto;
-    flex-direction: column;
-    
-  }
-  .main_content{
-    width: auto;
-    background-color: red;
-    display: flex;
-  }
+ 
   .listings_content{
     display:flex;
     justify-content: space-around;
     width: auto;
     height: auto;
     flex-direction: column;
-  }
-  
-  .main_content_hebergement{
-    
-    padding: 10;
+    padding: 1em;
     border-radius: 10%;
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    margin: 5px;
   }
   
   .mosaique{
   
-    display:flex;
-    flex-flow: row wrap
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    
+      border: 2px ;
+      padding: .5em;
+      
+      
+      
+      border-radius: 5%;
+      margin-top: 10px;
   }
   
-  .container{
-    display: grid;
+  .mosaique2{
+
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+
   }
+  
   
   
   
@@ -174,12 +158,81 @@ h2{
     min-height: 50px;
   }
   
-  .bleu{background-color: #28B;}
+  
 
-
-  .main_content_pop{
-    width: auto;
-    background-color: red;
+  .main_content_pop {
+    width: 90%;
+    height: 200px;
+    border-radius: 10%;
     display: flex;
-    max-height: 200px;
+    
+    margin: 10px 10px 10px 10px;
+    box-shadow: 10px 5px 5px grey;
+  }
+
+  .main_content_hebergement{
+    
+    
+    border-radius: 10%;
+    width:90%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin: 10px 10px 10px 10px;
+    box-shadow: 10px 5px 5px grey;
+  }
+
+  .main_content_hebergement1{
+    
+   
+    border-radius: 10%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin: 5px;
+    box-shadow: 10px 5px 5px grey;
+
+    grid-column-start: 1; 
+   grid-column-end: 1; 
+   grid-row-start: 1; 
+   grid-row-end: 3; 
+  }
+  .listings_item1{
+    
+   
+    display: flex;
+    width: 100%;
+    height:90%;
+    max-height: fit-content;
+    font-size:22px;
+    border-radius: 10%;
+  }
+
+  .main_content_hebergement2{
+    
+   
+    border-radius: 10%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin: 5px;
+    box-shadow: 10px 5px 5px;
+
+    grid-column-start: 3; 
+   grid-column-end: 3; 
+   grid-row-start: 1; 
+   grid-row-end: 3; 
+  }
+
+  .listings_item2{
+    
+   
+    display: flex;
+    width: 100%;
+    height:90%;
+    max-height: fit-content;
+    font-size:22px;
+    border-radius: 10%;
   }
