--- a/css/siteStyle3.css
+++ b/css/siteStyle3.css
@@ -286,3 +286,103 @@ h2{
     color: rgba(0, 101, 252 )
   
   }
+
+
+
+
+
+  /* responsive*/
+
+  @media only screen and (max-width: 1000px)   {
+    body{
+      
+      display: block;
+
+    }
+    .header{
+      width: auto;
+
+
+
+    }
+    .mosaique {
+      display:block;
+      width: auto;
+    }
+    
+    .corps {
+      width: auto;
+    }
+    .hebergement{
+      width: auto;
+
+    }
+
+    activités{
+      width: auto;
+      display:table-column;
+    }
+    .mosaique2{
+      width: auto;
+      display:block;
+
+    }
+
+    .populaire{
+      width: auto;
+      display:block;
+
+
+    }
+
+    .listings_image{
+    
+      border-radius: 10% 10% 0% 0%;
+      overflow: hidden;
+      
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
+    }
+
+    .main_content_hebergement{
+    
+    
+      border-radius: 10%;
+      width:90%;
+      display: flex;
+      flex-direction: column;
+      background-color: white;
+      
+      box-shadow: 10px 5px 5px grey;
+
+    }
+
+    .main_content_hebergement1{
+    
+    
+      border-radius: 10%;
+      width:90%;
+      display: flex;
+      flex-direction: column;
+      background-color: white;
+      margin: 10px 10px 10px 10px;
+      box-shadow: 10px 5px 5px grey;
+    }
+
+    .main_content_hebergement2{
+    
+    
+      border-radius: 10%;
+      width:90%;
+      display: flex;
+      flex-direction: column;
+      background-color: white;
+      margin: 10px 10px 10px 10px;
+      box-shadow: 10px 5px 5px grey;
+    }
+  
+  
+
+	}
+
