--- a/css/style.css
+++ b/css/style.css
@@ -3,50 +3,77 @@
 
 .inner
 {
-    display: inline-block;
-    border-radius: 60px;
+	margin: 15px;   
 }
-    
-.msgBtn{
-    border-radius: 10px;
-    background-color: white;
+
+.inner_titre{
+  display: inline-block;
 
 }
-#outer
-{
-    width:100%;
-    text-align: center;
-    display: inline;
+
+.inner_text{
+ 
+  border: solid 1px;
+  border-radius: 999px;
+  display: inline-block;
+  
+  padding-right: 1em;
+  
+
 }
+
+i.fas {
+  
+  padding: 15px;
+  border-radius: 50%;
+ 
+  
+  background-color: rgba(0, 101, 252, 0.3);
+  color: rgba(0, 101, 252 )
+
+}
+    
+
+.search .location .fa-map-marker-alt{
+
+  
+  
+     padding: 20px;
+    border-radius: none;
+    background-color: #e5e5e5;
+   
+    
+    
+    color:black;
+  
+  
+}
+
 .search{
   border: 1px solid #c4c4c4;
-  width: 500px;
-  overflow-x: hidden;
+  width: 400px;
+  overflow: hidden;
   display: flex;
+  justify-content: space-between;
   border-radius: 50px;
-  font-size: 18px;
   
-  left:30%;
-  top:200px;
+ 
 }
 .search input{
-  width: 300px;
-  height:65px;
   border: none;
-  padding: 8px 20px;
-  outline: none;
   font-size: 18px;
  
 }
 .button-src{
-  padding: 10px 110px; 
-  display: inline-block;
+  
+  
 }
 .button-src button{
-  padding: 10px 35px 10px 35px;
-  border-radius: 50px;
+  padding: 20px;
+  
   border: none;
-  margin: 9px 7px;
+  object-fit: contain;
+  
   background-color: rgba(0, 101, 252 );
   color: #ffffff;
   font-size: 18px;
@@ -68,6 +95,7 @@ h2{
   body {
       font-family: 'Raleway';
       font-size: 22px;
+     
   }
 
   .footer-row{
@@ -119,7 +147,7 @@ h2{
   .listings_item{
     
     
-    display: flex;
+    overflow: hidden;
     width: 100%;
     max-height: 200px;
   }
@@ -152,7 +180,7 @@ h2{
   .mosaique{
   
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr) ;
 
     
       border: 2px ;
@@ -164,10 +192,15 @@ h2{
       margin-top: 10px;
   }
   
-  .mosaique2{
+.mosaique2{
+
+  display: grid;
+}
+
+  .mosaique3{
 
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
 
 
   }
@@ -184,7 +217,7 @@ h2{
   
 
   .main_content_pop {
-    width: 90%;
+   
     
     border-radius: 10%;
     display: flex;
@@ -197,7 +230,7 @@ h2{
     
     
     border-radius: 10%;
-    width:90%;
+    
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -209,7 +242,7 @@ h2{
     
    
     border-radius: 10%;
-    width: 90%;
+    
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -226,7 +259,7 @@ h2{
    
     display: flex;
     width: 100%;
-    height:90%;
+    
     max-height: fit-content;
     font-size:22px;
     border-radius: 10%;
@@ -236,7 +269,7 @@ h2{
     
    
     border-radius: 10%;
-    width: 90%;
+    
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -260,17 +293,6 @@ h2{
     border-radius: 10%;
   }
 
-  i.fas {
-    position: relative;
-   float: left;
-    border-radius: 60px;
-    object-fit: cover;
-    padding: 0.5em 0.6em;
-    background-color: rgba(0, 101, 252, 0.3);
-    color: rgba(0, 101, 252 )
-  
-  }
-
   .stars {
     display: flex;
     align-items: center;
@@ -286,10 +308,11 @@ h2{
 
   /* responsive*/
 
-  @media only screen and (max-width: 1000px)   {
+  @media only screen and (max-width: 1334px)   {
     body{
-      
-      display: block;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 
     }
     .header{
@@ -304,20 +327,25 @@ h2{
     }
     
     .corps {
-      width: auto;
+      width: 100%;
       display: flex;
       flex-direction: column-reverse;
     }
     .hebergement{
       width: auto;
+      display:block;
+      background-color:white;
+      
 
     }
 
-    activités{
+    .activités{
+      width: 100%;
+      
       width: auto;
-      display:table-column;
+      display:block;
     }
-    .mosaique2{
+    .mosaique3{
       width: auto;
       display:block;
 
@@ -335,21 +363,33 @@ h2{
       border-radius: 10% 10% 0% 0%;
       
       
-      object-fit: cover;
-      height: 100%;
-      width: 100%;
       
+      
+      
+    }
+
+    
+
+    .listings_item1{
+      overflow: hidden;
+      
+
+    }
+
+    .listings_item2{
+      overflow: hidden;
+
     }
 
     .main_content_hebergement{
     
-    
-      border-radius: 10%;
-      width:90%;
-      display: flex;
-      flex-direction: column;
-      background-color: white;
       
+      border-radius: 10%;
+      
+      display: flex;
+      
+      background-color: white;
+      max-height: 285px;
       box-shadow: 10px 5px 5px grey;
 
     }
@@ -358,11 +398,11 @@ h2{
     
     
       border-radius: 10%;
-      width:90%;
-      display: flex;
-      flex-direction: column;
-      background-color: white;
       
+      display: flex;
+      
+      background-color: white;
+      max-height: 285px;
       box-shadow: 10px 5px 5px grey;
     }
 
@@ -370,7 +410,7 @@ h2{
     
     
       border-radius: 10%;
-      width:90%;
+      max-height: 285px;
       display: flex;
       flex-direction: column;
       background-color: white;
@@ -378,7 +418,15 @@ h2{
       box-shadow: 10px 5px 5px grey;
     }
   
-  
+    .main_content_pop {
+   
+    
+      border-radius: 10%;
+      display: flex;
+      background-color: white;
+      max-width: 90%;
+      box-shadow: 10px 5px 5px grey;
+    }
 
 	}
 
