--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,50 @@
 
 
+.nav{
+  display: flex;
+ justify-content:flex-end;
+}
+
+.nav ul
+{
+	margin: 0px;
+	padding:0px;
+	background: white;
+	list-style: none;
+
+}
+
+.nav a
+{   margin-top:0px;
+	padding: 10px;
+	display: block;
+	text-align: justify;
+	text-decoration: none;
+	color: #444D56;
+  font-size: 20px;
+  
+  
+  
+  
+}
+
+a:hover{
+
+ color: blue;
+ padding-top: 0.5rem;
+ border-top: 0.5rem solid blue;
+}
+
+.nav .menu
+{
+	display: flex;
+	flex-direction: row;
+  justify-content: flex-end;
+  
+
+}
+
+
 
 .inner
 {
@@ -103,7 +148,7 @@ h2{
 
   }
   
-  .hebergement{
+  #hebergement{
       background-color: #F2F2F2;
       border: 2px ;
     
@@ -331,7 +376,7 @@ h2{
       display: flex;
       flex-direction: column-reverse;
     }
-    .hebergement{
+    #hebergement{
       width: auto;
       display:block;
       background-color:white;
