--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,43 @@
 
 
+header{
+padding: 1em;
+
+}
+
+h1{
+  font-size:35px;
+}
+
+h2{
+  font-size: 22px;    
+  }
+
+  body {
+    font-family: 'Raleway';
+    font-size: 22px;
+    
+}
+
+.logo{
+  
+  position: absolute;
+  
+  left: 0;
+  
+
+}
+
+
 .nav{
   display: flex;
  justify-content:flex-end;
+ 
 }
 
 .nav ul
 {
 	margin: 0px;
-	padding:0px;
 	background: white;
 	list-style: none;
 
@@ -23,10 +52,21 @@
 	color: #444D56;
   font-size: 20px;
   
-  
-  
-  
 }
+
+.inscription{
+  background: none;
+	color: blue;
+  font-size: 20px;
+  border:none;
+  
+
+}
+
+
+
+
+
 
 a:hover{
 
@@ -48,7 +88,7 @@ a:hover{
 
 .inner
 {
-	margin: 15px;   
+	width: max-content;  
 }
 
 .inner_titre{
@@ -67,7 +107,7 @@ a:hover{
 
 }
 
-i.fas {
+.inner .inner_text .fas {
   
   padding: 15px;
   border-radius: 50%;
@@ -109,10 +149,7 @@ i.fas {
   font-size: 18px;
  
 }
-.button-src{
-  
-  
-}
+
 .button-src button{
   padding: 20px;
   
@@ -124,9 +161,7 @@ i.fas {
   font-size: 18px;
 }
 
-h2{
-  font-size: 22px;    
-  }
+
  
   .lists {
   
@@ -137,14 +172,13 @@ h2{
       padding: 0.5em;
   }
   
-  body {
-      font-family: 'Raleway';
-      font-size: 22px;
-     
-  }
+ 
+
+ 
 
   .footer-row{
     font-size: 22px;
+   
 
   }
   
@@ -190,21 +224,43 @@ h2{
 
   
   .listings_item{
-    
-    
+    border-radius: 10% 10% 0% 0%;
+    position: relative;
     overflow: hidden;
     width: 100%;
     max-height: 200px;
   }
+
+  .listings_item_pop{
+    
+    
+    overflow: hidden;
+    width: 100%;
+    max-height:200px;
+    border-radius: 10% 0% 0% 10%;
+  }
   .listings_image{
     
-    border-radius: 10% 10% 0% 0%;
+    
       
       
       object-fit: cover;
       height: 100%;
       width: 100%;
+      
   }
+  .listings_image_pop{
+    
+    border-radius: 10% 0% 0% 10%;
+      
+      
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
+      
+  }
+
+
   
   .greyText{
      font-size: 22px;
@@ -301,13 +357,12 @@ h2{
   }
   .listings_item1{
     
-   
+    overflow: hidden;
     display: flex;
     width: 100%;
-    
-    max-height: fit-content;
+    height:90%;
     font-size:22px;
-    border-radius: 10%;
+    border-radius: 10% 10% 0% 0%;
   }
 
   .main_content_hebergement2{
@@ -329,21 +384,13 @@ h2{
 
   .listings_item2{
     
-   
+    overflow: hidden;
     display: flex;
     width: 100%;
     height:90%;
-    max-height: fit-content;
-    font-size:22px;
-    border-radius: 10%;
-  }
-
-  .stars {
-    display: flex;
-    align-items: center;
-    padding: 0.5em;
     
-
+    font-size:22px;
+    border-radius: 10% 10% 0% 0%;
 
   }
 
@@ -353,52 +400,71 @@ h2{
 
   /* responsive*/
 
-  @media only screen and (max-width: 1334px)   {
-    body{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+   @media screen and (max-width: 800px)   {
+    .body{
+      font-size: 22px;
+
 
     }
     .header{
       width: auto;
-
+      display: flex;
+      flex-flow : row wrap;
 
 
     }
-    .mosaique {
-      display:block;
-      width: auto;
+
+    .inner{
+
+      display: flex;
+      flex-flow : column wrap;
+      
+      
+      
     }
     
+    .inner_text{
+
+      margin: 5px;
+    }
+    
+    .mosaique {
+      display: flex;
+      flex-flow : row wrap;
+      width: auto;
+    }
+    .mosaique2 {
+      display: flex;
+      flex-flow : row wrap;
+      
+    }
     .corps {
-      width: 100%;
+      width: auto;
       display: flex;
       flex-direction: column-reverse;
     }
     #hebergement{
-      width: auto;
-      display:block;
-      background-color:white;
+      display: flex;
+    flex-flow : row wrap;
+    width: auto;
       
 
     }
 
-    .activités{
-      width: 100%;
-      
-      width: auto;
-      display:block;
+    #activites{
+      display: flex;
+    flex-flow : row wrap;
     }
     .mosaique3{
-      width: auto;
-      display:block;
+      display: flex;
+      flex-flow : row wrap;
 
     }
 
     .populaire{
-      width: auto;
-      display:block;
+      display: flex;
+    flex-flow : row wrap;
+    width:auto;
 
 
     }
@@ -473,5 +539,15 @@ h2{
       box-shadow: 10px 5px 5px grey;
     }
 
+    .lists{
+      background-color: #F2F2F2;
+      display: flex;
+      flex-direction: column;
+  
+       
+       padding: 0.5em;
+        
+     }
+     
 	}
 
