--- a/css/style.css
+++ b/css/style.css
@@ -21,24 +21,25 @@ h2{
 
 .logo{
   
-  position: absolute;
-  
-  left: 0;
+  text-align:left;
   
 
 }
 
 
 .nav{
-  display: flex;
- justify-content:flex-end;
+  display: inline-grid;
+  grid-template-columns:  200px 1000px 100px;
+  
+  
+  
  
 }
 
 .nav ul
 {
-	margin: 0px;
-	background: white;
+	
+	
 	list-style: none;
 
 }
@@ -47,7 +48,7 @@ h2{
 {   margin-top:0px;
 	padding: 10px;
 	display: block;
-	text-align: justify;
+	
 	text-decoration: none;
 	color: #444D56;
   font-size: 20px;
@@ -59,6 +60,10 @@ h2{
 	color: blue;
   font-size: 20px;
   border:none;
+  text-align:left;
+  
+  margin: 0px;
+
   
 
 }
@@ -75,12 +80,12 @@ a:hover{
  border-top: 0.5rem solid blue;
 }
 
-.nav .menu
+.menu
 {
 	display: flex;
 	flex-direction: row;
   justify-content: flex-end;
-  
+  align-items: top;
 
 }
 
@@ -159,6 +164,11 @@ a:hover{
   background-color: rgba(0, 101, 252 );
   color: #ffffff;
   font-size: 18px;
+}
+
+.info{
+  display: flex;
+  align-items: center;
 }
 
 
