--- a/css/style.css
+++ b/css/style.css
@@ -36,22 +36,29 @@ body {
 .nav a{   
 	padding: 12px;
 	text-decoration: none;
-	color: #444D56;
+  color: #444D56;
+  transition: all 0.4s ease-out;
 }
+
+nav a:hover{
+  color: #0065fc;
+  transition: all 0.4s ease-out;
+  border-top: 3px #0065fc solid;
+ }
 
 .inscription p{
 	color: #0065fc;
 }
 
 .inscription a{
-padding:0;
+  padding:0;
 }
 
-nav a:hover{
- color: #0065fc;
- transition-duration: 0.3s;
- border-top: 3px #0065fc solid;
-}
+.inscription:hover{
+  color: #0065fc;
+  transition: all 0.4s ease-out;
+  border-top: 3px #0065fc solid;
+ }
 
 .menu{
 	display: flex;
@@ -66,7 +73,8 @@ nav a:hover{
   border-radius: 999px;
   display: inline-block;
   padding-right: 1em;
-  box-shadow: 0.1em 0.1em 0.1em  grey;
+  box-shadow: 0.1em 0.1em 0.1em rgba(189, 195, 199, 1);
+  transition: all 1s ease-out;
 }
 
 .inner_text:hover{
@@ -90,7 +98,7 @@ nav a:hover{
 
 .search{
   border: 1px solid #c4c4c4;
-  box-shadow: 0.1em 0.1em 0.1em  grey;
+  box-shadow: 0.1em 0.1em 0.1em rgba(189, 195, 199, 1);
   overflow: hidden;
   display: inline-flex;
   margin-top: 10px;
@@ -163,8 +171,16 @@ footer{
   margin: 10px;
 }
 
+#hebergement h2{
+  margin-left: 20px;
+}
 
-  
+.afficher{
+  font-weight: bold;
+  margin-left: 20px;
+  font-size: 20px;
+}
+
 .populaire {
   background-color: #F2F2F2;
   padding: .5em;
@@ -176,7 +192,11 @@ footer{
 .activités {
   padding: .5em;
 }
-  
+
+#activites{
+  margin: 10px;
+}
+
 .corps{
   display: flex;  
 }
@@ -187,14 +207,15 @@ footer{
   overflow: hidden;
   width: 100%;
   height: 200px;
+  max-height:150px;
 }
 
 .listings_item_pop{
   position:relative;
   overflow: hidden;
   width: 100%;
-  max-height:200px;
   border-radius: 10% 0% 0% 10%; 
+  min-height:150px;
   }
 
 .listings_image{
@@ -238,15 +259,20 @@ padding: 0.5em;
 
 .listings_content_pop{
   display:flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   width: 100%;
   height: auto;
   flex-direction: column;
   padding: 0.5em;
   border-radius: 10%;
 }
+
+.listings_content_pop p{
+  margin:0;
+}
+
   
-  .mosaique{
+.mosaique{
   display:grid;
   grid-template-columns: repeat(3, 1fr);
 }
@@ -264,6 +290,7 @@ padding: 0.5em;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-left: 5px;
 }
 
 .main_content_pop {
@@ -272,14 +299,14 @@ padding: 0.5em;
   display: flex;
   background-color: white;
   margin: 1em auto 1em;
-  box-shadow: 10px 5px 5px grey;
+  box-shadow: 5px 5px 5px rgba(189, 195, 199, 1);
 }
 
 .main_content_hebergement{
   border-radius: 10%;
   background-color: white;
   margin: 10px ;
-  box-shadow: 10px 5px 5px grey;
+  box-shadow: 5px 5px 5px rgba(189, 195, 199, 1);
 }
 
 .main_content_hebergement1{
@@ -288,7 +315,7 @@ padding: 0.5em;
   flex-direction: column;
   background-color: white;
   margin: 5px;
-  box-shadow: 10px 5px 5px grey;
+  box-shadow: 5px 5px 5px rgba(189, 195, 199, 1);
   grid-column-start: 1; 
   grid-column-end: 1; 
   grid-row-start: 1; 
@@ -311,7 +338,7 @@ padding: 0.5em;
   flex-direction: column;
   background-color: white;
   margin: 5px;
-  box-shadow: 10px 5px 5px;
+  box-shadow: 5px 5px 5px rgba(189, 195, 199, 1);
   grid-column-start: 3; 
   grid-column-end: 3; 
   grid-row-start: 1; 
@@ -443,7 +470,7 @@ header{
 }
 .search{
   width: 100%;
-  box-shadow: 0.1em 0.1em 0.1em  grey;
+  box-shadow: 0.1em 0.1em 0.1em  rgba(189, 195, 199, 1);
   justify-content: space-between;
   
 }
@@ -565,21 +592,21 @@ header{
 .main_content_hebergement{
   border-radius: 1em;
   background-color: white;
-  box-shadow: 10px 5px 5px grey;
+  box-shadow: 5px 5px 5px rgba(189, 195, 199, 1);
   width: 100%;
 }
 
 .main_content_hebergement1{
   border-radius: 1em;
   background-color: white;
-  box-shadow: 10px 5px 5px grey;
+  box-shadow: 5px 5px 5px rgba(189, 195, 199, 1);
   width: 100%;
 }
 
 .main_content_hebergement2{
   border-radius: 1em;
   background-color: white;
-  box-shadow: 10px 5px 5px grey;
+  box-shadow: 5px 5px 5px rgba(189, 195, 199, 1);
   width: 100%;
 }
   
@@ -588,16 +615,19 @@ header{
   display: flex;
   background-color: white;
   width: 100%;
-  box-shadow: 10px
-  5px 5px grey;
+  box-shadow: 5px 5px 5px rgba(189, 195, 199, 1);
 }
 
 .listings_content_pop{
   display:flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   width: 100%;
   flex-direction: column;
   padding: 0.5em;
+}
+
+.listings_content_pop p{
+  margin:0;
 }
 
 .listings_item_pop{
@@ -622,8 +652,7 @@ header{
   display: flex;
   background-color: white;
   width: 100%;
-  box-shadow: 10px
-  5px 5px grey;
+  box-shadow: 5px 5px 5px rgba(189, 195, 199, 1);
 }
 
 .listings_content{
